<resources>
    <string name="app_name">The Chat Rooms</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_createGroup">Create Group</string>
    <string name="group_name">Group Name</string>

    <string name="menu_chats">Chats</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="signUp">SIGN UP</string>
    <string name="emailID">EMAIL ID</string>
    <string name="firstName">FIRST NAME</string>
    <string name="lastName">LAST NAME</string>
    <string name="confirmPassword">CONFIRM PASSWORD</string>
    <string name="city">CITY</string>
    <string name="profileImage">Profile Image</string>
    <string name="gender">GENDER</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="logo">LOGO</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Create</string>
    <string name="onlineIcon">Online</string>
    <string name="add">add</string>
    <string name="delete">delete</string>
    <string name="remove">remove</string>
    <string name="editProfile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="send">Send</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="like">Like</string>
    <string name="action_showMembers">Show Members</string>
    <string name="title_activity_maps">Map</string>
    <string name="request_trip">Request Trip</string>
    <string name="action_requestTrip">Request Trip</string>
    <string name="requestTrip">Request Trip</string>
    <string name="dot">dot</string>
    <string name="box">box</string>
    <string name="menu_myTrips">My Trips</string>
    <string name="pick_up">Pick Up:</string>
    <string name="drop_off">Drop Off:</string>
    <string name="open_maps">Open in Maps</string>
    <string name="ride_status">Ride Status:</string>
    <string name="open_map">Open Map</string>
</resources>
