<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editProfile.EditProfileFragment">


    <ImageView
        android:id="@+id/edit_userProfileImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/profileImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <EditText
        android:id="@+id/edit_firstNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:hint="@string/firstName"
        android:importantForAutofill="no"
        android:textColor="@color/colorPrimary"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_userProfileImageView" />

    <EditText
        android:id="@+id/edit_lastNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/lastName"
        android:importantForAutofill="no"
        android:textColor="@color/colorPrimary"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edit_firstNameEditText"
        app:layout_constraintStart_toStartOf="@+id/edit_firstNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/edit_firstNameEditText" />

    <EditText
        android:id="@+id/edit_emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/emailID"
        android:importantForAutofill="no"
        android:inputType="none"
        android:editable="false"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/edit_lastNameEditText"
        app:layout_constraintStart_toStartOf="@+id/edit_lastNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/edit_lastNameEditText" />

    <EditText
        android:id="@+id/edit_cityEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/edit_emailEditText"
        app:layout_constraintStart_toStartOf="@+id/edit_emailEditText"
        app:layout_constraintTop_toBottomOf="@+id/edit_emailEditText"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/edit_genderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/gender"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/edit_cityEditText"
        app:layout_constraintTop_toBottomOf="@+id/edit_cityEditText" />

    <RadioGroup
        android:id="@+id/edit_genderRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/edit_cityEditText"
        app:layout_constraintStart_toStartOf="@+id/edit_genderTextView"
        app:layout_constraintTop_toBottomOf="@+id/edit_genderTextView"
        android:checkedButton="@+id/signUp_maleRadioButton">

        <RadioButton
            android:id="@+id/edit_maleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/nav_header_vertical_spacing"
            android:text="@string/male"
            android:textColor="@color/colorPrimary" />

        <RadioButton
            android:id="@+id/edit_femaleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nav_header_vertical_spacing"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:padding="@dimen/nav_header_vertical_spacing"
            android:text="@string/female"
            android:textColor="@color/colorPrimary" />
    </RadioGroup>

    <Button
        android:id="@+id/edit_updateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button_primary_color"
        android:text="@string/update"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/edit_genderRadioGroup"
        app:layout_constraintStart_toStartOf="@+id/edit_genderRadioGroup"
        app:layout_constraintTop_toBottomOf="@+id/edit_genderRadioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>