<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/main_loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:background="@drawable/rounded_button"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/main_passwordEditText"
            app:layout_constraintStart_toStartOf="@+id/main_passwordEditText"
            app:layout_constraintTop_toBottomOf="@+id/main_passwordEditText" />

        <EditText
            android:id="@+id/main_passwordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="@+id/main_emailEditText"
            app:layout_constraintStart_toStartOf="@+id/main_emailEditText"
            app:layout_constraintTop_toBottomOf="@+id/main_emailEditText" />

        <EditText
            android:id="@+id/main_emailEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="56dp"
            android:ems="10"
            android:hint="@string/emailID"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_LogoImageView" />

        <ImageView
            android:id="@+id/main_LogoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:contentDescription="@string/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/chat_bubble" />

        <TextView
            android:id="@+id/main_forgotPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/forgotPassword"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/main_passwordEditText"
            app:layout_constraintTop_toBottomOf="@+id/main_passwordEditText" />

        <TextView
            android:id="@+id/main_signUpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="176dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="178dp"
            android:text="@string/signUp"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_loginButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>