<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:isScrollContainer="true"
    tools:context=".SignUpActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    <TextView
        android:id="@+id/signUp_signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/signUp"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/signUp_userProfileImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/signUp_userProfileImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="56dp"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="56dp"
            android:layout_marginRight="56dp"
            android:contentDescription="@string/profileImage"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUp_signUpText"
            app:srcCompat="@android:drawable/sym_def_app_icon"
            tools:srcCompat="@tools:sample/avatars" />

        <EditText
            android:id="@+id/signUp_firstNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="56dp"
            android:layout_marginRight="56dp"
            android:ems="10"
            android:hint="@string/firstName"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUp_userProfileImageView" />

        <EditText
            android:id="@+id/signUp_lastNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/lastName"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="@+id/signUp_firstNameEditText"
            app:layout_constraintStart_toStartOf="@+id/signUp_firstNameEditText"
            app:layout_constraintTop_toBottomOf="@+id/signUp_firstNameEditText" />

        <EditText
            android:id="@+id/signUp_emailEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/emailID"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="@+id/signUp_lastNameEditText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/signUp_lastNameEditText"
            app:layout_constraintTop_toBottomOf="@+id/signUp_lastNameEditText" />

        <EditText
            android:id="@+id/signUp_passwordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="@+id/signUp_emailEditText"
            app:layout_constraintStart_toStartOf="@+id/signUp_emailEditText"
            app:layout_constraintTop_toBottomOf="@+id/signUp_emailEditText" />

        <EditText
            android:id="@+id/signUp_confirmPasswordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/confirmPassword"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="@+id/signUp_passwordEditText"
            app:layout_constraintStart_toStartOf="@+id/signUp_passwordEditText"
            app:layout_constraintTop_toBottomOf="@+id/signUp_passwordEditText" />

        <EditText
            android:id="@+id/signUp_cityEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/city"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="@+id/signUp_confirmPasswordEditText"
            app:layout_constraintStart_toStartOf="@+id/signUp_confirmPasswordEditText"
            app:layout_constraintTop_toBottomOf="@+id/signUp_confirmPasswordEditText" />

        <TextView
            android:id="@+id/signUp_genderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/gender"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/signUp_cityEditText"
            app:layout_constraintTop_toBottomOf="@+id/signUp_cityEditText" />

        <RadioGroup
            android:id="@+id/signUp_genderRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/signUp_cityEditText"
            app:layout_constraintStart_toStartOf="@+id/signUp_genderTextView"
            app:layout_constraintTop_toBottomOf="@+id/signUp_genderTextView"
            android:checkedButton="@+id/signUp_maleRadioButton">

            <RadioButton
                android:id="@+id/signUp_maleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:text="@string/male"
                android:textColor="@android:color/background_light" />

            <RadioButton
                android:id="@+id/signUp_femaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/nav_header_vertical_spacing"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:text="@string/female"
                android:textColor="@android:color/background_light" />
        </RadioGroup>

        <Button
            android:id="@+id/signUp_signUpButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_button"
            android:text="@string/signUp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/signUp_genderRadioGroup"
            app:layout_constraintStart_toStartOf="@+id/signUp_genderRadioGroup"
            app:layout_constraintTop_toBottomOf="@+id/signUp_genderRadioGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>